src/pydjinni/generator/java/it/java/error/expected/java/test/error/AsyncThrowingCallback.java
// AUTOGENERATED FILE - DO NOT MODIFY!
// This file was generated by PyDjinni from 'error.pydjinni'
package test.error;

public abstract class AsyncThrowingCallback {
    public abstract java.util.concurrent.CompletableFuture<Void> throwingError();
}
